--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "@rneui/themed": "^4.0.0-rc.8",
+    "@types/uuid": "^10.0.0",
     "axios": "^1.7.2",
-    "expo": "~51.0.14",
+    "expo": "~51.0.17",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
-    "expo-image-picker": "^15.0.5",
+    "expo-image-picker": "~15.0.6",
     "expo-linking": "~6.3.1",
     "expo-location": "^17.0.1",
-    "expo-router": "^3.5.16",
+    "expo-router": "~3.5.17",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.6",
@@ -34,23 +35,24 @@
     "formik": "^2.4.6",
     "glob": "^10.4.1",
     "lru-cache": "^10.2.2",
+    "moment": "^2.30.1",
     "osenv": "^0.1.5",
     "prop-types": "^15.8.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.74.2",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-khalti-sdk": "^1.0.2",
     "react-native-paper": "^5.12.3",
     "react-native-picker-select": "^9.1.3",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-swiper": "^1.6.0",
-    "react-native-web": "~0.19.10",
+    "react-native-uuid": "^2.0.2",
     "react-native-webview": "^13.8.6",
     "rimraf": "^5.0.7",
-    "rn-all-nepal-payment": "^1.0.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
@@ -59,7 +61,7 @@
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.1",
+    "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
